<?xml version="1.0"?>
<package format="2">
  <name>factory_supply_chain_blockchainization</name>
  <version>0.0.0</version>
  <description>The factory_supply_chain_blockchainization package</description>
  <maintainer email="alisher@aira.life">khassanov</maintainer>
  <license>BSD3</license>
  <!-- <url type="website">http://wiki.ros.org/factory_supply_chain_blockchainization</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robonomics_lighthouse</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>robonomics_lighthouse</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>robonomics_lighthouse</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
